feat: 한 명일때 체크, 닉네임 전체 순회